test/functions/fcf/UnannotatedFormalInProcType.good
UnannotatedFormalInProcType.chpl:1: In function 'test':
UnannotatedFormalInProcType.chpl:2: error: unannotated formal is ambiguous in this context
UnannotatedFormalInProcType.chpl:2: error: unannotated formal is ambiguous in this context
